[package]
name = "excel-kit"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
description.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.30.0"